Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25718

galera_sr.GCF-1060: void wsrep::transaction::adopt(const wsrep::transaction&): Assertion `transaction.is_streaming()' failed

    XMLWordPrintable

Details

    Description

      #0  __pthread_kill (threadid=<optimized out>, signo=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:62
      #1  0x00000000014b030b in my_write_core (sig=6) at /home/sciascid/Workspace/src/mariadb-server-test/mysys/stacktrace.c:386
      #2  0x0000000000bc6a7d in handle_fatal_signal (sig=6) at /home/sciascid/Workspace/src/mariadb-server-test/sql/signal_handler.cc:356
      #3  <signal handler called>
      #4  0x00007f664766c438 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
      #5  0x00007f664766e03a in __GI_abort () at abort.c:89
      #6  0x00007f6647664be7 in __assert_fail_base (fmt=<optimized out>, assertion=assertion@entry=0x1b0b485 "transaction.is_streaming()", file=file@entry=0x1b0b2c0 "/home/sciascid/Workspace/src/mariadb-server-test/wsrep-lib/src/transaction.cpp", line=line@entry=193, function=function@entry=0x1b0cb60 <wsrep::transaction::adopt(wsrep::transaction const&)::__PRETTY_FUNCTION__> "void wsrep::transaction::adopt(const wsrep::transaction&)") at assert.c:92
      #7  0x00007f6647664c92 in __GI___assert_fail (assertion=0x1b0b485 "transaction.is_streaming()", file=0x1b0b2c0 "/home/sciascid/Workspace/src/mariadb-server-test/wsrep-lib/src/transaction.cpp", line=193, function=0x1b0cb60 <wsrep::transaction::adopt(wsrep::transaction const&)::__PRETTY_FUNCTION__> "void wsrep::transaction::adopt(const wsrep::transaction&)") at assert.c:101
      #8  0x000000000156656d in wsrep::transaction::adopt (this=0x7f65d00cf600, transaction=...) at /home/sciascid/Workspace/src/mariadb-server-test/wsrep-lib/src/transaction.cpp:193
      #9  0x0000000000ac2314 in wsrep::client_state::adopt_transaction (this=0x7f65d00cf598, transaction=...) at /home/sciascid/Workspace/src/mariadb-server-test/wsrep-lib/include/wsrep/client_state.hpp:693
      #10 0x0000000000abf049 in Wsrep_high_priority_service::adopt_transaction (this=0x7f65d0089ef0, transaction=...) at /home/sciascid/Workspace/src/mariadb-server-test/sql/wsrep_high_priority_service.cc:222
      #11 0x000000000155ed56 in wsrep::server_state::convert_streaming_client_to_applier (this=0x3854910, client_state=0x7f65cc006cc8) at /home/sciascid/Workspace/src/mariadb-server-test/wsrep-lib/src/server_state.cpp:1191
      #12 0x000000000156c798 in wsrep::transaction::streaming_rollback (this=0x7f65cc006d30, lock=...) at /home/sciascid/Workspace/src/mariadb-server-test/wsrep-lib/src/transaction.cpp:1860
      #13 0x0000000001569291 in wsrep::transaction::bf_abort (this=0x7f65cc006d30, lock=..., bf_seqno=...) at /home/sciascid/Workspace/src/mariadb-server-test/wsrep-lib/src/transaction.cpp:1003
      #14 0x000000000156953b in wsrep::transaction::total_order_bf_abort (this=0x7f65cc006d30, lock=..., bf_seqno=...) at /home/sciascid/Workspace/src/mariadb-server-test/wsrep-lib/src/transaction.cpp:1048
      #15 0x0000000000ae1ff2 in wsrep::client_state::total_order_bf_abort (this=0x7f65cc006cc8, bf_seqno=...) at /home/sciascid/Workspace/src/mariadb-server-test/wsrep-lib/include/wsrep/client_state.hpp:680
      #16 0x0000000000ae17c2 in wsrep_bf_abort (bf_thd=0x7f65d0000af0, victim_thd=0x7f65cc000af0) at /home/sciascid/Workspace/src/mariadb-server-test/sql/wsrep_thd.cc:369
      #17 0x0000000000aec0f6 in wsrep_thd_bf_abort (bf_thd=0x7f65d0000af0, victim_thd=0x7f65cc000af0, signal=1 '\001') at /home/sciascid/Workspace/src/mariadb-server-test/sql/service_wsrep.cc:223
      #18 0x0000000000e99766 in wsrep_abort_transaction (bf_thd=0x7f65d0000af0, victim_thd=0x7f65cc000af0, signal=1 '\001') at /home/sciascid/Workspace/src/mariadb-server-test/storage/innobase/handler/ha_innodb.cc:18933
      #19 0x0000000000bde580 in ha_abort_transaction (bf_thd=0x7f65d0000af0, victim_thd=0x7f65cc000af0, signal=1 '\001') at /home/sciascid/Workspace/src/mariadb-server-test/sql/handler.cc:7089
      #20 0x0000000000ae1497 in wsrep_abort_thd (bf_thd_ptr=0x7f65d0000af0, victim_thd_ptr=0x7f65cc000af0, signal=1 '\001') at /home/sciascid/Workspace/src/mariadb-server-test/sql/wsrep_thd.cc:331
      #21 0x0000000000aceaaa in wsrep_handle_mdl_conflict (requestor_ctx=0x7f65d0000c10, ticket=0x7f65cc066b10, key=0x7f65cc05da30) at /home/sciascid/Workspace/src/mariadb-server-test/sql/wsrep_mysqld.cc:2350
      #22 0x00000000009ed838 in MDL_lock::can_grant_lock (this=0x7f65cc05da30, type_arg=MDL_EXCLUSIVE, requestor_ctx=0x7f65d0000c10, ignore_lock_priority=false) at /home/sciascid/Workspace/src/mariadb-server-test/sql/mdl.cc:1769
      #23 0x00000000009ee207 in MDL_context::try_acquire_lock_impl (this=0x7f65d0000c10, mdl_request=0x7f65d00136c8, out_ticket=0x7f6638203518) at /home/sciascid/Workspace/src/mariadb-server-test/sql/mdl.cc:2100
      #24 0x00000000009ee658 in MDL_context::acquire_lock (this=0x7f65d0000c10, mdl_request=0x7f65d00136c8, lock_wait_timeout=31536000) at /home/sciascid/Workspace/src/mariadb-server-test/sql/mdl.cc:2247
      #25 0x00000000009ef09e in MDL_context::acquire_locks (this=0x7f65d0000c10, mdl_requests=0x7f66382036b0, lock_wait_timeout=31536000) at /home/sciascid/Workspace/src/mariadb-server-test/sql/mdl.cc:2447
      #26 0x00000000007a71ee in lock_table_names (thd=0x7f65d0000af0, options=..., tables_start=0x7f65d0013280, tables_end=0x0, lock_wait_timeout=31536000, flags=0) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_base.cc:4141
      #27 0x0000000000a1cab4 in lock_table_names (thd=0x7f65d0000af0, table_list=0x7f65d0013280, table_list_end=0x0, lock_wait_timeout=31536000, flags=0) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_base.h:247
      #28 0x0000000000a1d5b2 in Sql_cmd_truncate_table::lock_table (this=0x7f65d0013948, thd=0x7f65d0000af0, table_ref=0x7f65d0013280, hton_can_recreate=0x7f66382039e0) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_truncate.cc:311
      #29 0x0000000000a1dc13 in Sql_cmd_truncate_table::truncate_table (this=0x7f65d0013948, thd=0x7f65d0000af0, table_ref=0x7f65d0013280) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_truncate.cc:440
      #30 0x0000000000a1df71 in Sql_cmd_truncate_table::execute (this=0x7f65d0013948, thd=0x7f65d0000af0) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_truncate.cc:531
      #31 0x00000000008565c9 in mysql_execute_command (thd=0x7f65d0000af0) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_parse.cc:6193
      #32 0x000000000085bbd1 in mysql_parse (thd=0x7f65d0000af0, rawbuf=0x7f65d00131c8 "TRUNCATE TABLE t1", length=17, parser_state=0x7f66382045c0, is_com_multi=false, is_next_command=false) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_parse.cc:7996
      #33 0x000000000085b2bf in wsrep_mysql_parse (thd=0x7f65d0000af0, rawbuf=0x7f65d00131c8 "TRUNCATE TABLE t1", length=17, parser_state=0x7f66382045c0, is_com_multi=false, is_next_command=false) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_parse.cc:7800
      #34 0x0000000000847ad1 in dispatch_command (command=COM_QUERY, thd=0x7f65d0000af0, packet=0x7f65d000a951 "TRUNCATE TABLE t1", packet_length=17, is_com_multi=false, is_next_command=false) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_parse.cc:1844
      #35 0x000000000084628a in do_command (thd=0x7f65d0000af0) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_parse.cc:1374
      #36 0x00000000009ded36 in do_handle_one_connection (connect=0x3d0f720) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_connect.cc:1412
      #37 0x00000000009dea50 in handle_one_connection (arg=0x3d0f720) at /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_connect.cc:1316
      #38 0x0000000000e55a1b in pfs_spawn_thread (arg=0x3840190) at /home/sciascid/Workspace/src/mariadb-server-test/storage/perfschema/pfs.cc:1869
      #39 0x00007f6648b5a6ba in start_thread (arg=0x7f6638205700) at pthread_create.c:333
      #40 0x00007f664773e51d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              sciascid Daniele Sciascia (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.