MDEV-25718 addendum: stabilization of test success (especially for 11.4+)

Added DEBUG_SYNC_С("ha_write_row_end") in the WSREP branch,
and added a new status to the list of pending statuses in
the mtr test.